wp-content/universal-assets/v1/scss/universal-globals.scss
// a little normalization of our own
body > div {
    font-size: 1rem; // undo genesis font sizing
}
.main-content.container, .main-content .container, .main-content.container-fluid, .main-content .container-fluid { 
    padding: 0px; // no awkward paddings on our bootstrap containers
}
a { // don't let genesis molest our links
    text-decoration: none;
}


.btn-red, .btn-reversed {
    font-weight: 300;
    padding: 15px 50px;
    font-size: 18px;
    margin-top: 10px;
    line-height: 1em;
    border: none;
    border-radius: 25px;
    background-color: #EA002A;
    color: #ffffff;
    transition: background-color 0.2s;
    display: inline-block;
    &:visited {
        color: #fff;
    }
}
.btn-red:hover, .btn-red:active, .btn-red:focus {
    color: #fff;
    background-color: #FF0000;
    transition: background-color 0.2s;
    text-decoration: underline !important;
}
.btn-reversed {
    border: solid 1px #ccc;
    background: transparent;
    cursor: default;
    &:hover, &:active, &:focus { color: #fff; }
}

.btn-blue-universal { // These are based off the commonly used btn colors of makerfaire
                      color: #1987C7;
                      border: thin solid #1987C7;
                      padding: 10px 30px;
                      &:hover, &:active, &:focus {
                          background-color: #1987C7;
                          color: #fff;
                      }
}
.btn-blue-reversed {
    color: #fff;
    border: thin solid white;
    padding: 10px 30px;
    &:hover, &:active, &:focus {
        color: #00597E;
        background-color: #fff;
    }
}

.wp-block-button__link {
    border-radius: 15px;
    &:hover {
        color: #fff;
    }
}

.universal-btn {
    background-color: #005e9a;
    color: #fff;
    display: inline-flex;
    justify-content: center;
    align-content: center;
    flex-direction: column;
    border-radius: 0;
    border-radius: 2px;
    -webkit-border-radius: 2px;
    text-transform: uppercase;
    font-size: 16px;
    font-weight: 300;      
    height: 50px;
    padding: 0px 15px;
    border: solid 1px #005e9a;
    &:visited, &:active { color: #fff; }
    &:hover, &:focus {
        background: #fff;
        color: #005e9a;
    }
}
.universal-btn-red {
    @extend .universal-btn;
    background-color: #EA002A;
    border-color: #EA002A;
    &:hover, &:focus {
        color: #EA002A;
    }
}
.universal-btn-navy {
    @extend .universal-btn;
    background-color: #151733;
    &:hover, &:focus {
        color: #151733;
        border-color: #151733;
    }
}
.universal-btn-reversed {
    @extend .universal-btn;
    background-color: #fff;
    border-color: #005e9a;
    color: #005e9a !important;
    &:hover, &:focus, &:active {
        color: #fff !important;
        background-color: #005e9a;
    }
    &:visited {
        background-color: #fff;
        color: #005e9a !important;
    }
}
.btn.full-width, .btn.full-width a {
    width: 100%;
}

// toggle
.cmn-toggle {
    position: absolute;
    margin-left: -9999px;
    visibility: hidden;
}
.cmn-toggle + label {
    display: block;
    position: relative;
    cursor: pointer;
    outline: none;
    user-select: none;
}
input.cmn-toggle-round + label {
    padding: 2px;
    width: 60px;
    height: 30px;
    background-color: #dddddd;
    border-radius: 30px;
}
input.cmn-toggle-round + label:before,
input.cmn-toggle-round + label:after {
    display: block;
    position: absolute;
    top: 1px;
    left: 1px;
    bottom: 1px;
    content: "";
}
input.cmn-toggle-round + label:before {
    right: 1px;
    background-color: #f1f1f1;
    border-radius: 30px;
    transition: background 0.4s;
}
input.cmn-toggle-round + label:after {
    width: 29px;
    background-color: #fff;
    border-radius: 100%;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
    transition: margin 0.4s;
}
input.cmn-toggle-round:checked + label:before {
    background-color: #8ce196;
}
input.cmn-toggle-round:checked + label:after {
    margin-left: 30px;
}

.fancybox-overlay { z-index: 999999; }
.fancybox-opened { 
    z-index: 9999999;
    @media screen and (max-width: 768px) {
        left: 0px !important; 
        width: 100vw !important;
        .fancybox-inner {
            width: auto !important;
        }
    }
}
#pinterest-offer a {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 100%;
    text-align: center;
    b {
        font-size: 20px;
        color: #333;
    }
}


.universal-warning {
    color: #4A4A4A;
    height: 40px;
    background: #FBC7D0;
    font-weight: bold;
    padding: 10px;
}

.tooltip {
    display: flex;
    background: black;
    font-size:12px;
    padding:10px;
    color: #fff; 
    z-index: 99;
    bottom: 10px;
    border: 2px solid white;
/* for IE */
  filter:alpha(opacity=80);
  /* CSS3 standard */
  opacity:0.8;
}

.ui-widget-shadow {
    opacity: .8;
    color: #fff;
    background: #000;
}
.ui-dialog {
    position: relative;
    min-width: 40%;
    overflow: visible;
    p { color: #000; }
    .ui-button-icon-only {
        visibility: hidden;
    }
    .ui-dialog-titlebar {
        padding: .25em .6em;
        white-space: normal;
        background: none;
        border: none;
        color: #333;
        font-size: 1.5em;
        cursor: pointer;
        .ui-dialog-title {
            font-family: "Roboto Medium", sans-serif;
        }
        .ui-dialog-titlebar-close {
            border: none;
            background: #fff;
            outline: 0;
            width: 100%;
            overflow: visible;
            &::after {
                font-family: 'FontAwesome';
                content: "\f057";
                color: #005e9a;
                background: #fff;
                border-radius: 25px;
                font-size: 24px;
                position: absolute;
                right: -25px;
                top: -10px;
                visibility: visible;
                line-height: 25px;
            }
        }
    }
    iframe { 
        width: 100%;
        height: 100%;
        position: absolute;
        top: 0px;
        left: 0px;
    }
}
.ui-widget-overlay {
    z-index: 998;
    position: fixed;
    height: 100vh;
    width: 100vw;
    background: rgba(0,0,0, .5);
    top: 0px;
}
.info-btn {
    border: solid 1px #005e9a;
    padding: 0px 9px;
    border-radius: 40px;
    font-size: 18px;
    font-weight: bold;
    color: #005e9a;
    font-style: normal;
    &:hover {
        color: #fff;
        background: #005e9a;
        text-decoration: none;
    }
}
.info-modal {
    display: none;
    padding: 30px 20px 20px;
}

// This checkbox code is so good, we got to make it universal
.sel-container {
    display: block;
    position: relative;
    padding-left: 30px;
    margin-bottom: 10px;
    cursor: pointer;
    font-size: 22px;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}
/* Hide the browser's default checkbox */
.sel-container input[type=checkbox] {
    position: absolute;
    opacity: 0;
    cursor: pointer;
}
/* Create a custom checkbox */
.checkmark {
    position: absolute;
    top: 0;
    left: 0;
    height: 20px;
    width: 20px;
    margin-top: 11px;
    border: thin solid white;
}
/* Create the checkmark/indicator (hidden when not checked) */
.checkmark:after {
    content: "";
    position: absolute;
    display: none;
}
/* Show the checkmark when checked */
.sel-container input:checked ~ .checkmark:after {
    display: block;
}
/* Style the checkmark/indicator */
.sel-container .checkmark:after {
    left: 7px;
    top: 3px;
    width: 5px;
    height: 10px;
    border: solid white;
    border-width: 0 1px 1px 0;
    -webkit-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    transform: rotate(45deg);
}

.genesis-skip-link {
    display: none;
}

// SAFARI FIXES

.safari-mac {
    @media (min-width: 992px) {
        .col-md-6 {
            width: 49.9%;
        }
    }
    @media (min-width: 768px) {
        .col-md-6 {
            width: 49.88%;
        }
        .col-sm-6 {
            width: 49.9%;
        }
    }
}

